<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_order_success"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:id="@+id/title" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        android:layout_below="@+id/title"
        android:id="@+id/divider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thank_you_text"
        android:id="@+id/thanksMessage"
        android:layout_below="@+id/divider"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:layout_marginLeft="@dimen/view_horizontal_margin"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_submitted_message"
        android:id="@+id/orderSubmittedMessage"
        android:layout_below="@+id/thanksMessage"
        android:layout_marginLeft="@dimen/view_horizontal_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/order_number"
        android:id="@+id/orderNumber"
        android:layout_below="@+id/orderSubmittedMessage"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textSize="50sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickup_address_text"
        android:id="@+id/address"
        android:layout_below="@+id/orderNumber"
        android:layout_marginLeft="@dimen/view_horizontal_margin"
        android:layout_marginTop="@dimen/view_vertical_margin" />

</RelativeLayout>
